style: fixed spacings

--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,14 @@ hr {
     margin: auto;
 }
 
+.container-center h1 {
+    margin-block-end: auto;
+}
+
+.container-center p {
+    margin-block-start: 1.5em;
+}
+
 /* links */
 
 .link {
@@ -38,7 +46,7 @@ hr {
 .link-primary {
     background-color: var(--primary-color);
     border-radius: 0.5rem;
-    color: white;
+    color: white;   
 }
 
 .link-secondary {
@@ -129,6 +137,7 @@ hr {
     text-align: center;
     color: white;
     border-top-right-radius: 1rem;
+    margin-top: 1em;
 }
 
 .footer .footer-header {
@@ -163,4 +172,12 @@ small {
 
 p {
     text-align: justify;
+}
+
+.project-title {
+    margin-block-start: 4rem;
+}
+
+span {
+    font-size: larger;
 }
